added assertion error of not uploaded file (common customer mistake)

--- a/linear_miniproject_funcan_appr.ipynb
+++ b/linear_miniproject_funcan_appr.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/boorlakov/linear_miniproject_funcan_appr/blob/main/linear_miniproject_funcan_appr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/boorlakov/linbaser/blob/main/linear_miniproject_funcan_appr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -96,9 +96,9 @@
         " \n",
         "modulename = 'datetime'\n",
         "if modulename not in sys.modules:\n",
-        "    print('ERR: You have not imported the {} module'.format(modulename))\n",
+        "    print(\"\\033[0;37;41m{} модуль не был обнаружил\".format(modulename))\n",
         "else:\n",
-        "    print('Всё хорошо, можно идти дальше.')"
+        "    print('\\033[0;37;42mВсе модули были подключены успешно. Можно идти дальше.')"
       ],
       "execution_count": null,
       "outputs": []
@@ -111,14 +111,19 @@
       },
       "source": [
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (2) Загружаем входные данные с файла</font></b>\n",
-        " \n",
+        "\n",
+        "fn = None \n",
         "uploaded = files.upload()\n",
         "for fn in uploaded.keys():\n",
-        "    print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
-        "        name=fn, length=len(uploaded[fn])))\n",
-        "os.rename(fn, fn.replace(\" \", \"\"))\n",
-        "fn = fn.replace(\" \", \"\")\n",
-        "print('Файл успешно загружен. Можно идти дальше.')"
+        "    print( 'Пользователь загрузил файл \"{name}\" длиной {length} байт'.format(\n",
+        "            name=fn, length=len( uploaded[fn] ) ) )\n",
+        "\n",
+        "assert fn is not None, '\\033[0;37;41mФайл не был загружен'\n",
+        "\n",
+        "os.rename( fn, fn.replace( \" \", \"\" ) )\n",
+        "fn = fn.replace( \" \", \"\" )\n",
+        "print( '-----------------------------------------' )\n",
+        "print( '\\033[0;37;42mФайл успешно загружен. Можно идти дальше.' )"
       ],
       "execution_count": null,
       "outputs": []
@@ -143,7 +148,7 @@
       "source": [
         "# (4) Когда вы ввели функцию, запустите код в ячейке\n",
         "def target_func( x ):\n",
-        "    return x**6"
+        "    return np.sin( x )"
       ],
       "execution_count": null,
       "outputs": []
@@ -157,12 +162,14 @@
       "source": [
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (5) Инициализировать начальную сетку</font></b>\n",
         "\n",
+        "assert fn is not None, '\\033[0;37;41mФайл не был загружен'\n",
+        "\n",
         "num_of_test = 0\n",
         "data_to_output = ''\n",
         "\n",
         "dt = np.dtype( np.float64 )\n",
         "grid = np.fromfile( fn, dtype=dt, sep=',' )\n",
-        " \n",
+        "\n",
         "print( 'Начальная сетка:', grid )\n",
         " \n",
         "ax1 = plt.axes( frameon=False )\n",
@@ -189,7 +196,9 @@
       "source": [
         "#@{ display-mode: \"form\" }\n",
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (6) Выбираем то, как будем дробить сетку (пропустите эту ячейку, если не хотитие дробить сетку)</font></b>\n",
-        " \n",
+        "\n",
+        "assert fn is not None, '\\033[0;37;41mФайл не был загружен' \n",
+        "\n",
         "def change_grid( grid, mode, num, start_node=0, end_node=0 ):\n",
         "    \"\"\"Changes the grid by slices.\n",
         "    \n",
@@ -291,7 +300,7 @@
       "source": [
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (7) Бим-бим, бам-бам, и всё готово!</font></b>\n",
         " \n",
-        " \n",
+        "assert fn is not None, '\\033[0;37;41mФайл не был загружен' \n",
         " \n",
         "#--- Start of functions definitions\n",
         " \n",
@@ -574,7 +583,7 @@
         "data_to_output += 'f(x) = ' + 'отредачить' + '\\n'\n",
         "data_to_output += 'Сетка = ' + str( grid ) + '\\n\\n'\n",
         "data_to_output += 'Весовые коэффициенты = ' + str( weight_coefs ) + '\\n\\n'\n",
-        "data_to_output += '||f-u|| = ' + str(norm) + '\\n\\n'\n",
+        "data_to_output += '||f-u|| =' + str(norm) + '\\n\\n'\n",
         "data_to_output += u_x + '\\n'\n",
         "data_to_output += '-----' + '\\n\\n'"
       ],
@@ -591,7 +600,7 @@
         "#@{ display-mode: \"form\" }\n",
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (8) Вычислить приближающую функцию в точке</font></b>\n",
         " \n",
-        " \n",
+        "assert fn is not None, '\\033[0;37;41mФайл не был загружен' \n",
         " \n",
         "#--- Start of functions definitions\n",
         " \n",
@@ -795,8 +804,10 @@
       },
       "source": [
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (14) Вывод вычисленных данных на одной сетке </font></b>\n",
-        "\n",
-        "print(data_to_output)"
+        "if not data_to_output:\n",
+        "    print( 'Нечего выводить' )\n",
+        "else:\n",
+        "    print( data_to_output )"
       ],
       "execution_count": null,
       "outputs": []
