got rid of weird np.array initialisation

--- a/linear_miniproject_funcan_appr.ipynb
+++ b/linear_miniproject_funcan_appr.ipynb
@@ -156,8 +156,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B1KZUAUcjhtN",
-        "cellView": "form"
+        "id": "B1KZUAUcjhtN"
       },
       "source": [
         "#@title <b><font color=\"red\" size=\"+3\">←</font><font color=\"black\" size=\"+3\"> (5) Инициализировать начальную сетку</font></b>\n",
@@ -224,7 +223,7 @@
         "    \"\"\"\n",
         "    \n",
         "    # making grid by a string\n",
-        "    tmp_grid = str( grid[ 0 ] ) + ' '\n",
+        "    tmp_grid = [grid[ 0 ]]\n",
         "    #Режим полностью\n",
         "    FULLY_RUS = '\\u043F\\u043E\\u043B\\u043D\\u043E\\u0441\\u0442\\u044C\\u044E'\n",
         "    if mode == FULLY_RUS: \n",
@@ -233,27 +232,27 @@
         "            tmp_val = grid[ i-1 ]\n",
         "            for j in range( 0, num-1 ):\n",
         "                tmp_val += step\n",
-        "                tmp_grid += str( tmp_val ) + ' '\n",
+        "                tmp_grid.append( tmp_val )\n",
         "    \n",
-        "            tmp_grid += str( grid[ i ] ) + ' '\n",
+        "            tmp_grid.append( grid[ i ] )\n",
         "    #Узловой режим\n",
         "    else:\n",
         "        for i in range( 1, start_node ):\n",
-        "            tmp_grid += str( grid[i] ) + ' '\n",
+        "            tmp_grid.append( grid[i] )\n",
         "    \n",
         "        step = ( grid[ end_node ] - grid[ start_node ] ) / num\n",
         "        tmp_val = grid[ start_node ]\n",
         "    \n",
         "        if start_node != 0:\n",
-        "            tmp_grid += str( tmp_val ) + ' '\n",
+        "            tmp_grid.append( tmp_val )\n",
         "    \n",
         "        for j in range( 0, num-1 ):\n",
         "            tmp_val += step\n",
-        "            tmp_grid += str( tmp_val ) + ' '\n",
+        "            tmp_grid.append( tmp_val )\n",
         "        for i in range( end_node, len( grid ) ):\n",
-        "            tmp_grid += str( grid[i] ) + ' '\n",
+        "            tmp_grid.append( grid[i] )\n",
         "    \n",
-        "    grid = np.fromstring( tmp_grid, dtype=dt, sep=' ' )\n",
+        "    grid = np.array( tmp_grid )\n",
         "    \n",
         "    return grid \n",
         " \n",
@@ -498,10 +497,10 @@
         "X = np.linspace( 0, 1, n )\n",
         " \n",
         "# Making local matrix to calculate global matrix of appromaximation  \n",
-        "nodes_length_tmp = ''\n",
+        "nodes_length_tmp = []\n",
         "for i in range( 1, len( grid ) ):\n",
-        "    nodes_length_tmp += str( grid[ i ] - grid[ i-1 ] ) + ' '\n",
-        "nodes_length = np.fromstring( nodes_length_tmp, dtype=dt, sep=' ' )\n",
+        "    nodes_length_tmp.append( grid[ i ] - grid[ i-1 ] )\n",
+        "nodes_length = np.array( nodes_length_tmp)\n",
         " \n",
         "base_local_mat = np.zeros( ( 2, 2 ) )\n",
         "#1 1 element of local matrix\n",
@@ -518,7 +517,8 @@
         " \n",
         "# Preparation of calculation global matrix\n",
         "global_matrix = np.zeros( ( len( grid ), len( grid ) ) )\n",
-        " \n",
+        "\n",
+        "# TO-DO: - change to np.sum or equal, because that realization is slow \n",
         "for k in range( 0, len( nodes_length ) ):\n",
         "  for i in range( k, len( base_local_mat ) + k ):\n",
         "    for j in range( k, len( base_local_mat ) + k ):\n",
@@ -558,7 +558,7 @@
         "                                                             grid[ i ] ) ),\n",
         "                                    dx )\n",
         "# Do not forget, that norm = sqrt(scalar_product)  \n",
-        "norm = norm**( 1/2 )\n",
+        "norm = norm**( 0.5 )\n",
         " \n",
         "print( 'Вектор скалярных произведений:' )\n",
         "print( L2_inner_products )\n",
